--- a/index.html
+++ b/index.html
@@ -1,5 +1,36 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		<h1>ReactJS</h1>
-	</body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>ReactJS</title>
+	<script type="text/javascript" src="app/script/react.js"></script>
+	<script type="text/javascript" src="app/script/react-dom.min.js"></script>
+	<script type="text/javascript" src="app/script/browser.min.js"></script>
+	<script type="text/babel" src="app/script/app.js"></script>
+	<link href="app/css/app.css" rel="stylesheet" />
+</head>
+
+<body>
+	<h1>ReactJS</h1>
+
+	<table id="appTable">
+		<tr>
+			<td><div id="one"></div></td>
+			<td><div id="two"></div></td>
+			<td><div id="three"></div></td>
+		</tr>
+		<tr>
+			<td><div id="four"></div></td>
+			<td><div id="five"></div></td>
+			<td><div id="six"></div></td>
+		</tr>
+		<tr>
+			<td><div id="seven"></div></td>
+			<td><div id="eight"></div></td>
+			<td><div id="ten"></div></td>
+		</tr>
+	<table>
+
+</body>
 </html>
